# cheq

./: BENCHMARKS.md  Cargo.toml  README.md  USAGE.md
.github/workflows/: release.yml
resources/: qeq.data.toml
src/: error.rs  lib.rs  params.rs  types.rs
src/math/: constants.rs  mod.rs  shielding.rs
src/shielding/: constants.rs  gto.rs  mod.rs  sto.rs
src/solver/: implementation.rs  mod.rs  options.rs  solver.rs
tests/: alkali.rs  clusters.rs  hydrogen.rs  polymers.rs
tests/common/: mod.rs
