[package]
name = "cheq"
version = "0.1.0"
authors = [
    "Tony Kan <tonykan@caltech.edu>",
    "William A. Goddard III <wag@caltech.edu>",
]
license = "MIT"
repository = "https://github.com/caltechmsc/cheq"
edition = "2024"
description = "A pure Rust library for fast, dynamic partial charge calculation via the QEq method."
keywords = [
    "chemistry",
    "qeq",
    "partial-charges",
    "force-fields",
    "molecular-dynamics",
]
categories = ["science", "simulation"]
readme = "README.md"

[dependencies]
libm = "0.2.8"
faer = "0.23.2"
thiserror = "2.0.17"
toml = "0.9.7"
serde = { version = "1.0.188", features = ["derive"] }
clap = { version = "4.4.7", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3.6.0"
approx = "0.5"

[lib]
name = "cheq"
path = "src/lib.rs"

[[bin]]
name = "cheq"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
