[package]
name = "cheq"
version = "0.5.0"
authors = [
    "Tony Kan <tonykan@caltech.edu>",
    "William A. Goddard III <wag@caltech.edu>",
]
license = "MIT"
repository = "https://github.com/caltechmsc/cheq"
edition = "2024"
description = "A pure Rust library and CLI for fast, dynamic partial charge calculation via the QEq method."
keywords = [
    "chemistry",
    "qeq",
    "partial-charges",
    "force-fields",
    "molecular-dynamics",
]
categories = [
    "science::computational-chemistry::molecular-simulation",
    "science::computational-chemistry::electronic-structure",
    "command-line-utilities",
]
readme = "README.md"

[dependencies]
rayon = "1.11.0"
libm = "0.2.8"
sto-ns = "0.1.1"
faer = "0.23.2"
thiserror = "2.0.17"
toml = "0.9.8"
serde = { version = "1.0.188", features = ["derive"] }
clap = { version = "4.5.53", features = ["derive"], optional = true }
prettytable-rs = { version = "0.10.0", optional = true }
indicatif = { version = "0.18.3", optional = true }

[dev-dependencies]
tempfile = "3.23.0"
approx = "0.5.1"

[lib]
name = "cheq"
path = "src/lib.rs"

[[bin]]
name = "cheq"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:prettytable-rs", "dep:indicatif"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
